samples/_failures_safe/1761599013_3e03c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2fedea8.c: In function ‘main’:
./samples/SAFE/__tmp_e2fedea8.c:150:13: error: expected declaration or statement at end of input
  150 |             input_matrix(&mat1, "A");
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_e2fedea8.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2fedea8.c:150:13: error: expected declaration or statement at end of input
